--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
           <img src='img/logo.svg' width='154' height='64' alt='Логотип GllacyShop'>
         </a>
         <ul class='site-navigation'>
-          <li><a href='#' class='active link'>Каталог</a>
+          <li><a href='#' class='active link main-menu'>Каталог</a>
             <ul class='catalog-navigation'>
               <li><a href='#' class='link'>Новинки</a></li>
               <li><a href='catalog.html' class='link'>Сливочное</a></li>
@@ -22,8 +22,8 @@
               <li><a href='#' class='link'>Мелорин</a></li>
             </ul>
           </li>
-          <li><a href='delivery-and-payment.html' class='link'>Доставка и оплата</a></li>
-          <li><a href='about-company.html' class='link'>О Компании</a></li>
+          <li><a href='delivery-and-payment.html' class='link main-menu'>Доставка и оплата</a></li>
+          <li><a href='about-company.html' class='link main-menu'>О Компании</a></li>
         </ul>
         <div class='user-navigation'>
           <span class='search-logo'></span>
