Сетка личного проекта
Простроена сетка предложений и товаров на главной странице

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <button type='button' class='slider-button-3 visually-hidden'></button>
         <div class='slider-top first-slide' id='first-slide'>
           <img src='img/icecream-slide1.png' height='881' width='1045' alt='Крем-брюле и пломбир с малиновым джемом'>
-          <div class='caption-cr'>
+          <div class='caption-slide'>
             <p>Крем-брюле и пломбир с малиновым джемом</p>
             <a href='#' class='button link'>Давайте оба!</a>
           </div>
@@ -90,18 +90,20 @@
           <a href='#' class='button link'>Давайте оба!</a>
         </div>
       </div>
-      <section class='first-offers'>
-        <h2 class='offers-caption'>Малинка даром!</h2>
-        <p class='offers'>При покупке 2кг любого фруктового мороженого, добавим
+      <div class='offers-wrapper'>
+        <section class='first-offers'>
+          <h2 class='offers-caption'>Малинка даром!</h2>
+          <p class='offers'>При покупке 2кг любого фруктового мороженого, добавим
            в ваш заказ банку малинового варенья бесплатно.</p>
-        <a href='#' class='button offers-btn link'>Хочу варенье!</a>
-      </section>
-      <section class='second-offers'>
-        <h2 class='offers-caption'>Шоколадки даром!</h2>
-        <p>При покупке 2кг пломбира, добавим в ваш заказ упаковку
+           <a href='#' class='button offers-btn link'>Хочу варенье!</a>
+        </section>
+        <section class='second-offers'>
+          <h2 class='offers-caption'>Шоколадки даром!</h2>
+          <p>При покупке 2кг пломбира, добавим в ваш заказ упаковку
             вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-        <a href='#' class='button offers-btn link'>Хочу шоколадки!</a>
-      </section>
+          <a href='#' class='button offers-btn link'>Хочу шоколадки!</a>
+        </section>
+      </div>
       <ul class='product-icecream'>
         <li>
           <a href='#' class='icecream link'> <!--Ширина и высота изображений задана предварительно-->
