Сетка личного проекта
Закончена сетка основных блоков главной страницы

--- a/index.html
+++ b/index.html
@@ -138,81 +138,86 @@
           <button type='button' class='button'>Быстрый просмотр</button>
         </li>
       </ul>
-
-      <article class='advantages'>
-        <h2 class='visually-hidden'>Приемущества компании</h2>
-        <h3 class='definition'>Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
-        <ul class='advantages-list'>
-          <li class='making'>
-            <p>Все наше мороженое изготавливается на собственном
+      <div class='other-info-wrapper'>
+        <article class='advantages'>
+          <h2 class='visually-hidden'>Приемущества компании</h2>
+          <h3 class='definition'>Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
+          <ul class='advantages-list'>
+            <li class='making'>
+              <p>Все наше мороженое изготавливается на собственном
                 производстве, c использованием современного оборудования
                 и проверенных временем технологий.</p>
-          </li>
-          <li class='ecology'>
-            <p>Для изготовления мороженого используются настоящие сливки
-               и молоко высочайшего качества. Все дополнительные ингредиенты
-               и добавки произведены из натурального, экологически чистого сырья.</p>
-          </li>
-          <li class='purchase'>
-            <p>Закупка ингредиентов производится только у проверенных фермерских
-               хозяйств и компаний, с которыми нас связывает долговременное
-               сотрудничество</p>
-          </li>
-          <li class='delivery'>
-            <p>Доставка нашего мороженого до заказчиков осуществляется в
-               специальном термопаке, который не дает мороженому растаять
-               в пути и позволяет сохранить превосходный вкус.</p>
-          </li>
-        </ul>
-      </article>
-      <article class='blog'>
-        <h3 class='blog-caption'>Новое в нашем блоге</h3>
-        <a href='#' class='blog-name link'>
-          10 способов сервировки фруктовых щербетов к столу
-        </a>
-      </article>
-      <div class='subscription'>
-        <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе высего
-           самого вкусного, что у нас происходит. Обещаем не спамить и не слать
-           всякой ненужной ерунды. Честно =)</p>
-        <form action='#' method='post'>
-          <label class='visually-hidden' for='subs-email'>Электронная почта</label>
-          <input type='email' name='email-subs' id='subs-email' placeholder='Электронная почта'>
-          <button type='submit' class='button'>Отправить</button>
-        </form>
+            </li>
+            <li class='ecology'>
+              <p>Для изготовления мороженого используются настоящие сливки
+                и молоко высочайшего качества. Все дополнительные ингредиенты
+                и добавки произведены из натурального, экологически чистого сырья.</p>
+            </li>
+            <li class='purchase'>
+              <p>Закупка ингредиентов производится только у проверенных фермерских
+                хозяйств и компаний, с которыми нас связывает долговременное
+                сотрудничество</p>
+            </li>
+            <li class='delivery'>
+              <p>Доставка нашего мороженого до заказчиков осуществляется в
+                специальном термопаке, который не дает мороженому растаять
+                в пути и позволяет сохранить превосходный вкус.</p>
+            </li>
+          </ul>
+        </article>
+        <article class='blog'>
+          <h3 class='blog-caption'>Новое в нашем блоге</h3>
+          <a href='#' class='blog-name link'>
+            10 способов сервировки фруктовых щербетов к столу
+          </a>
+        </article>
+        <div class='subscription'>
+          <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе высего
+            самого вкусного, что у нас происходит. Обещаем не спамить и не слать
+            всякой ненужной ерунды. Честно =)</p>
+          <form action='#' method='post'>
+            <label class='visually-hidden' for='subs-email'>Электронная почта</label>
+            <input type='email' name='email-subs' id='subs-email' placeholder='Электронная почта'>
+            <button type='submit' class='button'>Отправить</button>
+          </form>
+        </div>
       </div>
+
       <div class='map'>
           <!--Как понимаю, карту добавляем потом-->
-      </div>
-      <div class='contact-information'>
-        <p>Адрес главного офиса
-           и офлайн магазина:</p>
-        <p class='address'>ул. Большая Конюшенная
-            19/8, Санкт-Петербург</p>
-        <p>Для заказов по телефону:</p>
-        <p class='address'> 8 812 450-25-25</p>
-        <p>(c 10 до 20 ежедневно)</p>
-        <button type='button' class='button'>Форма обратной связи</button>
+
+        <div class='contact-information'>
+          <p>Адрес главного офиса
+            и офлайн магазина:</p>
+           <p class='address'>ул. Большая Конюшенная
+              19/8, Санкт-Петербург</p>
+            <p>Для заказов по телефону:</p>
+          <p class='address'> 8 812 450-25-25</p>
+          <p>(c 10 до 20 ежедневно)</p>
+          <button type='button' class='button'>Форма обратной связи</button>
+        </div>
       </div>
     </main>
     <footer class='main-footer'>
-      <ul class='social-list'>
-        <li><a class='social-button twitter link' href='#' aria-label='Твиттер'></a></li>
-        <li><a class='social-button instagram link' href='#' aria-label='Инстаграм'></a></li>
-        <li><a class='social-button facebook link' href='#' aria-label='Фэйсбук'></a></li>
-        <li><a class='social-button vk link' href='#' aria-label='В контакте'></a></li>
-      </ul>
-      <ul class='additional-list'>
-        <li><a class='for-providers link' href='#'>Для поставщиков</a></li>
-        <li><a class='about-production link' href='#'>О производсвте</a></li>
-        <li><a class='documents link' href='#'>Наши документы</a></li>
-        <li><a class='standards link' href='#'>Экологические стандарты</a></li>
-      </ul>
-      <div class='footer-copyright'>
-        <a href='htmlacademy.ru' class='link'>
-          <img src='img/logo-htmlacademy.svg' width='108' height='39' alt='Логотип HTML academy'>
-        </a>
-        <p>Сделано в <a href='htmlacademy.ru' class='link'>HTML Academy</a> © 2017</p>
+      <div class='container'>
+        <ul class='social-list'>
+          <li><a class='social-button twitter link' href='#' aria-label='Твиттер'></a></li>
+          <li><a class='social-button instagram link' href='#' aria-label='Инстаграм'></a></li>
+          <li><a class='social-button facebook link' href='#' aria-label='Фэйсбук'></a></li>
+          <li><a class='social-button vk link' href='#' aria-label='В контакте'></a></li>
+        </ul>
+        <ul class='additional-list'>
+          <li><a class='for-providers link' href='#'>Для поставщиков</a></li>
+          <li><a class='about-production link' href='#'>О производсвте</a></li>
+          <li><a class='documents link' href='#'>Наши документы</a></li>
+          <li><a class='standards link' href='#'>Экологические стандарты</a></li>
+        </ul>
+        <div class='footer-copyright'>
+          <a href='htmlacademy.ru' class='link'>
+            <img src='img/logo-htmlacademy.svg' width='108' height='39' alt='Логотип HTML academy'>
+          </a>
+          <p>Сделано в <a href='htmlacademy.ru' class='link'>HTML Academy</a> © 2017</p>
+        </div>
       </div>
     </footer>
     <div class='feedback-window'>
