--- a/catalog.html
+++ b/catalog.html
@@ -89,84 +89,86 @@
       </div>
     </header>
     <main class='container'>
-      <ul class='breadcrumbs'>
-          <li><a href='index.html' class='link'>Главная</a> » </li>
-          <li><a href='#' class='link'>Каталог</a> » </li>
-          <li>Сливочное</li>
-      </ul>
-      <h1 class='main-caption'>Сливочное мороженое</h1>
-      <form class='options' action='#' method='get'>
-        <fieldset>
-          <legend class='visually-hidden'>Критерии поиска</legend>
-          <p class='sorting'>
-            <label for='sorting' class='option-caption'>Соритровка:</label>
-            <select class='sorting-type' name='sorting-type'>
-              <option value='popularity'>по-популярности</option>
-              <option value='inexpensive-first'>сначала недорогие</option>
-              <option value='expensive-first'>сначала дорогие</option>
-              <option value='fat-content'>по жирности</option>
-            </select>
-          </p>
-          <p class='price-field'>
-            <label for='price' class='option-caption'>Цена: 100 руб. - 500 руб.</label>
-            <input class='' type='range' min='100' max='500' step='10' name='price' id='price'>
-          </p>
-          <span class='option-caption'>Жирность:</span>
-          <ul class='fatness-list'>
-            <li>
-              <label>
-                <input class='' type='radio' name='fatness' value='0'><span>0%</span>
-              </label>
-            </li>
-            <li>
-              <label>
-                <input class='' type='radio' name='fatness' value='10' checked><span>до 10%</span>
-              </label>
-            </li>
-            <li>
-              <label>
-                <input class='' type='radio' name='fatness' value='30'><span>до 30%</span>
-              </label>
-            </li>
-            <li>
-              <label>
-                <input class='' type='radio' name='fatness' value='>30'><span>выше 30%</span>
-              </label>
-            </li>
+      <div class='wrapper-top'>
+        <ul class='breadcrumbs'>
+            <li><a href='index.html' class='link'>Главная</a> » </li>
+            <li><a href='#' class='link'>Каталог</a> » </li>
+            <li>Сливочное</li>
           </ul>
-          <span class='option-caption'>Наполнители:</span>
-          <ul class='add-list'>
-            <li>
-              <label for='chocolate'>
-                <input class='' type='checkbox' name='chocolate-fillers' id='chocolate' checked>шоколадные
-              </label>
-            </li>
-            <li>
-              <label for='sugar'>
-                <input class='' type='checkbox' name='sugar-fillers' id='sugar' checked>сахарные присыпки
-              </label>
-            </li>
-            <li>
-              <label>
-                <input class='' type='checkbox' name='fruit-fillers' id='fruit'>фрукты
-              </label>
-            </li>
-            <li>
-              <label for='syrup'>
-                <input class='' type='checkbox' name='syrup-fillers' id='syrup'>сироп
-              </label>
-            </li>
-            <li>
-              <label for='jam'>
-                <input class='' type='checkbox' name='jam-fillers' id='jam'>джем
-              </label>
-            </li>
-          </ul>
-          <p class='accept'>
-            <button class='apply-btn' type='submit'>Применить</button>
-          </p>
-        </fieldset>
-      </form>
+          <h1 class='main-caption'>Сливочное мороженое</h1>
+          <form class='options' action='#' method='get'>
+            <fieldset>
+              <legend class='visually-hidden'>Критерии поиска</legend>
+              <p class='sorting'>
+                <label for='sorting' class='option-caption'>Соритровка:</label>
+                <select class='sorting-type' name='sorting-type'>
+                  <option value='popularity'>по-популярности</option>
+                  <option value='inexpensive-first'>сначала недорогие</option>
+                  <option value='expensive-first'>сначала дорогие</option>
+                  <option value='fat-content'>по жирности</option>
+                </select>
+              </p>
+              <p class='price-field'>
+                <label for='price' class='option-caption'>Цена: 100 руб. - 500 руб.</label>
+                <input class='' type='range' min='100' max='500' step='10' name='price' id='price'>
+              </p>
+              <span class='option-caption'>Жирность:</span>
+              <ul class='fatness-list'>
+                <li>
+                  <label>
+                    <input class='' type='radio' name='fatness' value='0'><span>0%</span>
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input class='' type='radio' name='fatness' value='10' checked><span>до 10%</span>
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input class='' type='radio' name='fatness' value='30'><span>до 30%</span>
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input class='' type='radio' name='fatness' value='>30'><span>выше 30%</span>
+                  </label>
+                </li>
+              </ul>
+              <span class='option-caption'>Наполнители:</span>
+              <ul class='add-list'>
+                <li>
+                  <label for='chocolate'>
+                    <input class='' type='checkbox' name='chocolate-fillers' id='chocolate' checked>шоколадные
+                  </label>
+                </li>
+                <li>
+                  <label for='sugar'>
+                    <input class='' type='checkbox' name='sugar-fillers' id='sugar' checked>сахарные присыпки
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input class='' type='checkbox' name='fruit-fillers' id='fruit'>фрукты
+                  </label>
+                </li>
+                <li>
+                  <label for='syrup'>
+                    <input class='' type='checkbox' name='syrup-fillers' id='syrup'>сироп
+                  </label>
+                </li>
+                <li>
+                  <label for='jam'>
+                    <input class='' type='checkbox' name='jam-fillers' id='jam'>джем
+                  </label>
+                </li>
+              </ul>
+              <p class='accept'>
+                <button class='apply-btn' type='submit'>Применить</button>
+              </p>
+            </fieldset>
+          </form>
+        </div>
       <ul class='product-icecream'>
         <li>
           <a href='#' class='icecream link'>
