--- a/catalog.html
+++ b/catalog.html
@@ -7,16 +7,16 @@
     <link href='css/style.css' rel='stylesheet'>
   </head>
   <body>
-    <header class='main-header'>
+    <header class='main-header container'>
       <nav class='main-navigation'>
-        <div class='main-navigation-wrapper'>
+
           <a class='main-header-logo link' href='index.html'>
             <img src='img/logo.svg' width='154' height='64' alt='Логотип GllacyShop'>
           </a>
           <ul class='site-navigation'>
             <li><a href='#' class='active link main-menu'>Каталог</a>
               <ul class='catalog-navigation'>
-                <li><a href='#' class='link'>Новинки</a></li>
+                <li><a href='#' class='link new'>Новинки</a></li>
                 <li><a href='catalog.html' class='link'>Сливочное</a></li>
                 <li><a href='#' class='link'>Щербеты</a></li>
                 <li><a href='#' class='link'>Фруктовый лед</a></li>
@@ -27,11 +27,11 @@
             <li><a href='about-company.html' class='link main-menu'>О Компании</a></li>
           </ul>
           <div class='user-navigation'>
-            <span class='search-logo'></span>
+            <span class='search-logo user-navigation-item'></span>
             <form class='search-form' action='https://echo.htmlacademy.ru' method='get'>
               <input type='search' class='search-field' name='search' placeholder='Что ищем?'>
             </form>
-            <a href='#' class='login-link link'>Вход</a>
+            <a href='#' class='login-link link user-navigation-item'>Вход</a>
             <form class='login-form' action='https://echo.htmlacademy.ru' method='post'>
               <ul class='login-window'>
                 <li class='login-field'>
@@ -53,7 +53,7 @@
                 </li>
               </ul>
             </form>
-            <a class='basket link' href='#'>2 товара</a>
+            <a class='basket link user-navigation-item' href='#'>2 товара</a>
             <div class='basket-table'> <!--обернул в див, чтобы ссылка "оформить заказ" не выпадала из окна таблицы-->
               <table>
                 <tr>
@@ -77,7 +77,7 @@
               <a href='#' class='button checkout-btn link'>Оформить заказ</a>
             </div>
           </div>
-        </div>
+
       </nav>
       <div class='contact-information-top'>
         <p class='working-hours'>
@@ -174,7 +174,9 @@
           <a href='#' class='icecream link'>
             <img src='img/product-01.jpg' width='267' height='267' alt='Сливочное с апельсиновым джемом и цитрусовой стружкой'>
             <p class='icecream-price'>310₽<span class='icecream-kilo'>/кг</span></p>
-            <h2 class='icecream-name'>Сливочное с апельсиновым джемом и цитрусовой стружкой</h2>
+            <h2 class='icecream-name'>
+              <span>Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
+            </h2>
           </a>
           <button type='button' class='button'>Быстрый просмотр</button>
         </li>
@@ -182,7 +184,9 @@
           <a href='#' class='icecream link'>
             <img src='img/product-02.jpg' width='267' height='267' alt='Сливочно-кофейное с кусочками шоколада'>
             <p class='icecream-price'>380₽<span class='icecream-kilo'>/кг</span></p>
-            <h2 class='icecream-name'>Сливочно-кофейное с кусочками шоколада</h2>
+            <h2 class='icecream-name'>
+              <span>Сливочно-кофейное с кусочками шоколада</span>
+            </h2>
           </a>
           <button type='button' class='button'>Быстрый просмотр</button>
         </li>
@@ -190,7 +194,9 @@
           <a href='#' class='icecream link'>
             <img src='img/product-03.jpg' width='267' height='267' alt='Сливочно-клубничное с присыпкой из белого шоколада'>
             <p class='icecream-price'>355₽<span class='icecream-kilo'>/кг</span></p>
-            <h2 class='icecream-name'>Сливочно-клубничное с присыпкой из белого шоколада</h2>
+            <h2 class='icecream-name'>
+              <span>Сливочно-клубничное с присыпкой из белого шоколада</span>
+            </h2>
           </a>
           <button type='button' class='button'>Быстрый просмотр</button>
         </li>
@@ -198,7 +204,9 @@
           <a href='#' class='icecream link'>
             <img src='img/product-04.jpg' width='267' height='267' alt='Сливочное крем-брюле с карамальной подливкой'>
             <p class='icecream-price'>415₽<span class='icecream-kilo'>/кг</span></p>
-            <h2 class='icecream-name'>Сливочное крем-брюле с карамальной подливкой</h2>
+            <h2 class='icecream-name'>
+              <span>Сливочное крем-брюле с карамальной подливкой</span>
+            </h2>
           </a>
           <button type='button' class='button'>Быстрый просмотр</button>
         </li>
@@ -206,7 +214,9 @@
           <a href='#' class='icecream link'>
             <img src='img/product-05.jpg' width='267' height='267' alt='Сливочное с брусничным джемом'>
             <p class='icecream-price'>325₽<span class='icecream-kilo'>/кг</span></p>
-            <h2 class='icecream-name'>Сливочное с брусничным джемом</h2>
+            <h2 class='icecream-name'>
+              <span>Сливочное с брусничным джемом</span>
+            </h2>
           </a>
           <button type='button' class='button'>Быстрый просмотр</button>
         </li>
@@ -214,7 +224,9 @@
           <a href='#' class='icecream link'>
             <img src='img/product-06.jpg' width='267' height='267' alt='Сливочно-черничное с цельными ягодами черники'>
             <p class='icecream-price'>410₽<span class='icecream-kilo'>/кг</span></p>
-            <h2 class='icecream-name'>Сливочно-черничное с цельными ягодами черники</h2>
+            <h2 class='icecream-name'>
+              <span>Сливочно-черничное с цельными ягодами черники</span>
+            </h2>
           </a>
           <button type='button' class='button'>Быстрый просмотр</button>
         </li>
@@ -222,7 +234,9 @@
           <a href='#' class='icecream link'>
             <img src='img/product-07.jpg' width='267' height='267' alt='Сливочно-лимонное с карамельной присыпкой'>
             <p class='icecream-price'>375₽<span class='icecream-kilo'>/кг</span></p>
-            <h2 class='icecream-name'>Сливочно-лимонное с карамельной присыпкой</h2>
+            <h2 class='icecream-name'>
+              <span>Сливочно-лимонное с карамельной присыпкой</span>
+            </h2>
           </a>
           <button type='button' class='button'>Быстрый просмотр</button>
         </li>
@@ -230,7 +244,9 @@
           <a href='#' class='icecream link'>
             <img src='img/product-08.jpg' width='267' height='267' alt='Сливочное c шоколадной стружкой'>
             <p class='icecream-price'>320₽<span class='icecream-kilo'>/кг</span></p>
-            <h2 class='icecream-name'>Сливочное c шоколадной стружкой</h2>
+            <h2 class='icecream-name'>
+              <span>Сливочное c шоколадной стружкой</span>
+            </h2>
           </a>
           <button type='button' class='button'>Быстрый просмотр</button>
         </li>
@@ -238,7 +254,9 @@
           <a href='#' class='icecream link'>
             <img src='img/product-09.jpg' width='267' height='267' alt='Сливочное-ванильное с кусочками шоколада'>
             <p class='icecream-price'>440₽<span class='icecream-kilo'>/кг</span></p>
-            <h2 class='icecream-name'>Сливочно-ванильное с кусочками шоколада</h2>
+            <h2 class='icecream-name'>
+              <span>Сливочно-ванильное с кусочками шоколада</span>
+            </h2>
           </a>
           <button type='button' class='button'>Быстрый просмотр</button>
         </li>
@@ -246,7 +264,9 @@
           <a href='#' class='icecream link'>
             <img src='img/product-10.jpg' width='267' height='267' alt='Сливочно c ментоловым сиропом'>
             <p class='icecream-price'>435₽<span class='icecream-kilo'>/кг</span></p>
-            <h2 class='icecream-name'>Сливочное c ментоловым сиропом</h2>
+            <h2 class='icecream-name'>
+              <span>Сливочное c ментоловым сиропом</span>
+            </h2>
           </a>
           <button type='button' class='button'>Быстрый просмотр</button>
         </li>
@@ -254,7 +274,9 @@
           <a href='#' class='icecream link'>
             <img src='img/product-11.jpg' width='267' height='267' alt='Сливочное с кусочками черного шоколада'>
             <p class='icecream-price'>355₽<span class='icecream-kilo'>/кг</span></p>
-            <h2 class='icecream-name'>Сливочное с кусочками черного шоколада</h2>
+            <h2 class='icecream-name'>
+              <span>Сливочное с кусочками черного шоколада</span>
+            </h2>
           </a>
           <button type='button' class='button'>Быстрый просмотр</button>
         </li>
@@ -262,7 +284,9 @@
           <a href='#' class='icecream link'>
             <img src='img/product-12.jpg' width='267' height='267' alt='Сливочное с мятным сиропом'>
             <p class='icecream-price'>420₽<span class='icecream-kilo'>/кг</span></p>
-            <h2 class='icecream-name'>Сливочное с мятным сиропом</h2>
+            <h2 class='icecream-name'>
+              <span>Сливочное с мятным сиропом</span>
+            </h2>
           </a>
           <button type='button' class='button'>Быстрый просмотр</button>
         </li>
