--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
             <img src='img/logo.svg' width='154' height='64' alt='Логотип GllacyShop'>
           </a>
           <ul class='site-navigation'>
-            <li><a href='#' class='active link main-menu'>Каталог</a>
+            <li class='submenu-container site-navigation-item active'><a href='#' class='link main-menu active-item'>Каталог</a>
               <ul class='catalog-navigation'>
                 <li><a href='#' class='link new'>Новинки</a></li>
                 <li><a href='catalog.html' class='link'>Сливочное</a></li>
@@ -23,8 +23,8 @@
                 <li><a href='#' class='link'>Мелорин</a></li>
               </ul>
             </li>
-            <li><a href='delivery-and-payment.html' class='link main-menu'>Доставка и оплата</a></li>
-            <li><a href='about-company.html' class='link main-menu'>О Компании</a></li>
+            <li class='site-navigation-item'><a href='delivery-and-payment.html' class='link main-menu'>Доставка и оплата</a></li>
+            <li class='site-navigation-item'><a href='about-company.html' class='link main-menu'>О Компании</a></li>
           </ul>
           <div class='user-navigation'>
             <span class='search-logo user-navigation-item'></span>
@@ -305,26 +305,24 @@
         </li>
       </ul>
     </main>
-    <footer class='main-footer'>
-      <div class='container'>
-        <ul class='social-list'>
-          <li><a class='social-button twitter link' href='#' aria-label='Твиттер'></a></li>
-          <li><a class='social-button instagram link' href='#' aria-label='Инстаграм'></a></li>
-          <li><a class='social-button facebook link' href='#' aria-label='Фэйсбук'></a></li>
-          <li><a class='social-button vk link' href='#' aria-label='В контакте'></a></li>
-        </ul>
-        <ul class='additional-list'>
-          <li><a class='for-providers link' href='#'>Для поставщиков</a></li>
-          <li><a class='about-production link' href='#'>О производсвте</a></li>
-          <li><a class='documents link' href='#'>Наши документы</a></li>
-        <li><a class='standards link' href='#'>Экологические стандарты</a></li>
-        </ul>
-        <div class='footer-copyright'>
-          <a href='htmlacademy.ru' class='link'>
-            <img src='img/logo-htmlacademy.svg' width='108' height='39' alt='Логотип HTML academy'>
-          </a>
-          <p>Сделано в <a href='htmlacademy.ru' class='link'>HTML Academy</a> © 2017</p>
-        </div>
+    <footer class='main-footer container'>
+      <ul class='social-list'>
+        <li><a class='social-button twitter link' href='#' aria-label='Твиттер'></a></li>
+        <li><a class='social-button instagram link' href='#' aria-label='Инстаграм'></a></li>
+        <li><a class='social-button facebook link' href='#' aria-label='Фэйсбук'></a></li>
+        <li><a class='social-button vk link' href='#' aria-label='В контакте'></a></li>
+      </ul>
+      <ul class='additional-list'>
+        <li><a class='for-providers link' href='#'>Для поставщиков</a></li>
+        <li><a class='about-production link' href='#'>О производсвте</a></li>
+        <li><a class='documents link' href='#'>Наши документы</a></li>
+      <li><a class='standards link' href='#'>Экологические стандарты</a></li>
+      </ul>
+      <div class='footer-copyright'>
+        <a href='htmlacademy.ru' class='link'>
+          <img src='img/logo-htmlacademy.svg' width='108' height='39' alt='Логотип HTML academy'>
+        </a>
+        <p>Сделано в <a href='htmlacademy.ru' class='link'>HTML Academy</a> © 2017</p>
       </div>
     </footer>
   </body>
